# senserx

./: .gitignore  README.md  ngrok.yml  package-lock.json  package.json
backend/: .env-example  docker-compose.yml
backend/api/: .env-example  Dockerfile  nodemon.json  package.json  senserx-firebase-adminsdk-h9drf-3efdc54ebd.json  tsconfig.json  tslint.json
backend/api/src/: app.ts  mqtt.ts
backend/api/src/workers/: MqttWorker.js  (+1 more)
backend/mosquitto/config/: mosquitto.conf  passwordfile
backend/mosquitto/data/: mosquitto.db
backend/sense-shelf/: CMakeLists.txt  Makefile  README.md  package.json  sdkconfig  sdkconfig.old
backend/sense-shelf/device/: SenseRx-Bill Of Materials.xlsx
backend/sense-shelf/main/: CMakeLists.txt  credentials_template.h  sense-shelf.c
backend/sense-shelf/main/certs/: server_cert.pem  server_key.pem
backend/sense-shelf/main/components/Definitions/: Definitions.c  Definitions.h
backend/sense-shelf/main/components/FSR406/: FSR406.c  FSR406.h
backend/sense-shelf/main/components/HX711/: HX711.c  HX711.h
backend/sense-shelf/main/components/Mqtt/: Mqtt.c  Mqtt.h
backend/sense-shelf/main/components/NvsFlash/: NvsFlash.c  NvsFlash.h
backend/sense-shelf/main/components/WebServer/: WebServer.c  WebServer.h
backend/sense-shelf/main/components/WiFi/: WiFi.c  WiFi.h
frontend/mobile/: package.json
frontend/mobile/senserx/: .env-example  Makefile  README.md  firebase.json  pubspec.yaml
frontend/web/: package.json  tsconfig.json
frontend/web/public/: firebase-messaging-sw.js  index.html
frontend/web/src/: App.tsx  index.js
(+119 files in other folders)
